--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "variant_test"
+name = "all_variants"
 version = "0.1.0"
 authors = ["Kristoffer Ödmark <kristoffer.odmark90@gmail.com>"]
 edition = "2018"
@@ -8,5 +8,4 @@ edition = "2018"
 
 [dependencies]
 
-every_variant = {path="../every_variant"}
-all_variants = {path = "../"}
+every_variant = {path = "./every_variant"}
