--- a/every_variant/Cargo.toml
+++ b/every_variant/Cargo.toml
@@ -4,6 +4,9 @@ version = "0.1.0"
 authors = ["Kristoffer Ödmark <kristoffer.odmark90@gmail.com>"]
 edition = "2018"
 
+description = "To be used with all variant, contains the derive macro"
+license = "MIT"
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [lib]
 proc-macro = true
