--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ or in nested enum trees. This to allow for additional testing of codepaths
 """
 
 license = "MIT"
+repository = "https://github.com/TotalKrill/all_variants"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
