--- a/every_variant/Cargo.toml
+++ b/every_variant/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "every_variant"
-version = "0.1.6-alpha.0"
+version = "0.1.6"
 authors = ["Kristoffer Ödmark <kristoffer.odmark90@gmail.com>"]
 edition = "2018"
 
