--- a/every_variant/Cargo.toml
+++ b/every_variant/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "every_variant"
-version = "0.2.0"
+version = "0.2.1"
 authors = ["Kristoffer Ödmark <kristoffer.odmark90@gmail.com>"]
 edition = "2018"
 
@@ -16,3 +16,4 @@ proc-macro = true
 quote = "1.0"
 syn = {version = "1.0", features = ["full", "extra-traits"]}
 proc-macro-error = "1.0"
+proc-macro2 = "1.0"
