--- a/every_variant_macro/Cargo.toml
+++ b/every_variant_macro/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "every_variant"
-version = "0.2.1"
+name = "every_variant_macro"
+version = "0.3.0"
 authors = ["Kristoffer Ödmark <kristoffer.odmark90@gmail.com>"]
 edition = "2018"
 
