--- a/every_variant_macro/Cargo.toml
+++ b/every_variant_macro/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "every_variant_macro"
-version = "0.3.2-alpha.0"
+version = "0.3.1"
 authors = ["Kristoffer Ödmark <kristoffer.odmark90@gmail.com>"]
 edition = "2018"
 
